<resources>
    <string name="app_name">SF ParkPal</string>

    <string name="action_back">Back</string>
    <string name="action_settings">Settings</string>
    <string name="connection_error">Error loading data. Check network connection and try again.</string>
    <!-- <string name="action_refresh">Refresh</string> -->
    <string name="settings">Settings</string>
    <string name="error_connecting">Could not connect to SFPark</string>
    <string name="retrieving_data">Retrieving data</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="location_number">1</string>

    <string name="activity_history">Parking History</string>
    <string name="title_activity_history">Parking History</string>
    <string name="history_latitude">Latitude</string>
    <string name="history_longitude">Longitude</string>
    <string name="history_time">Time</string>
    <string name="history_park_lat">Latitude:</string>
    <string name="history_park_latitude">Latitude</string>
    <string name="history_park_lon">Longitude:</string>
    <string name="history_park_longitude">Longitude</string>
    <string name="history_park_ti">Time:</string>
    <string name="history_park_time">Time</string>
    <string name="history_save">Save Location</string>
    <string name="history_add_location">Current Location</string>
    <string name="history_delete">Delete History</string>
    <string name="parking_info">Parking Information</string>

    <string name="about_title">About SF Park Pal</string>
    <string name="about_creators">Created By:</string>
    <string name="about_company">San Francisco State University</string>
    <string name="about_class">CSC 413 Class</string>
    <string name="about_group">Group 3 (Team Leader: Daniel Martin)</string>
    <string name="about_date">Spring 2015 Semester</string>
    <string name="about_members">Team Members:</string>
    <string name="about_membernames">Alejandro Lai, Ami Parikh, Daniel Martin, Dennis Chung, Dolly Ramos, and Ihsan Taha.</string>
    <string name="about_contact">Contact:</string>
    <string name="about_email">Email:</string>
    <string name="about_leaderemail">dpmartin@mail.sfsu.edu</string>
    <string name="about_phone">Phone:</string>
    <string name="about_phonenumber">415-265-3692</string>

    <string name="title_activity_about">Menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_return">Return</string>
    <string name="menu_settings">Settings</string>

    <string name="reminder_title">Reminder</string>
    <string name="reminder_info">Info</string>
    <string name="reminder_hours">Hours</string>
    <string name="reminder_type">AM/PM</string>
    <string name="reminder_setreminder">Set Reminder:</string>
    <string name="reminder_entertime">Enter Time:</string>
    <string name="reminder_inputtime">00:00</string>
    <string name="reminder_ambutton">am</string>
    <string name="reminder_pmbutton">pm</string>
    <string name="reminder_currenttime">Current Time:</string>
    <string name="reminder_clocktime">Clock Time</string>
    <string name="action_search">Search</string>
    <string name="title_activity_reminder">ReminderActivity</string>

    <string name="radius_title">Choose a Radius</string>

    <string name="themes">Themes</string>
    <string name="themes_title">Color Themes</string>
    <string name="first_theme">1. </string>
    <string name="button_beach">Beach</string>
    <string name="second_theme">2. </string>
    <string name="button_garden">Garden</string>
    <string name="third_theme">3. </string>
    <string name="button_rose">Rose</string>
    <string name="fourth_theme">4. </string>
    <string name="button_ice">Ice</string>
    <string name="fifth_theme">5. </string>
    <string name="button_desert">Desert</string>
    <string name="sixth_theme">6. </string>
    <string name="button_royal">Royal</string>
    <string name="seventh_theme">7. </string>
    <string name="button_snow">Snow</string>
    <string name="eighth_theme">8. </string>
    <string name="button_default">Default</string>

    <string name="can_not_get_location">Could not get your location</string>
    <string name="title_activity_preferences">PreferencesActivity</string>

    <string name="location_database_activity">Location Database Activity</string>
    <string name="park_location">Park Location</string>
    <string name="set_parked_location">Set Parked Location:</string>
    <string name="choose_location_id">Choose Location ID:</string>
    <string name="enter_x_position">Enter X Coordinate:</string>
    <string name="enter_y_position">Enter Y Coordinate:</string>
    <string name="or">OR</string>
    <string name="use_location_button">Use Current Location</string>
    <string name="set_location_button">Set Location</string>
    <string name="get_location_button">Get Location</string>
    <string name="delete_location_button">Delete Location</string>
    <string name="product">Park ID:</string>
    <string name="productID"></string>
    <string name="cancel">Cancel</string>
    <string name="no_connection_available">No connection available</string>
    <string name="turn_on_wifi_or_data_services">Turn on wifi or data services</string>
    <string name="activate_location_services">Activate location services</string>
    <string name="location_services_not_activated">Location services not activated</string>
    <string name="title_activity_settings_activity3">Location services not activated</string>
    <string name="title_activity_settings_activity2">Location services not activated</string>
    <string name="title_activity_parked_history">Parking History</string>

    <!--Terms of Service-->
    <string name="hello">You accepted the TOS!</string>
    <string name="tos">Terms Of Service: Cautious driving . Always drive vigilantly according to road conditions and in accordance with traffic laws.It is strictly forbidden to interact with the app any purpose other than navigation while driving. Alternatively, such interactions with the app may be used by a passenger other than the driver, provided it does not interfere with the due course of driving and does not distract the drivers attention to the road.</string>
    <string name="updates">Upates in this version: Welcome! This is the first update! More to come. </string>
    <string name="problem_communicating_with_sfpark">There was a problem communicating with SF Park, try again later</string>
    <string name="parked_history">Parked History</string>
    <!--Terms of Service-->

</resources>
