<!-- File added by Ihsan Taha on Thursday, 11:30pm, 4/23/15 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:id="@+id/menu"
    android:focusableInTouchMode="true"
    android:background="#EEEEEE">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="0dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/button_return"
            android:id="@+id/button_return"
            android:layout_gravity="center_horizontal|left"
            android:background="#DD6600"
            android:alpha="50"
            android:onClick="sendToMain"
            android:clickable="true"
            android:textColor="#DDDDDD"
            android:padding="0dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/menu_settings"
            android:id="@+id/menu_settings"
            android:layout_gravity="center_horizontal"
            android:gravity="right"
            android:textColor="#999999" />
    </TableRow>

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#0099CC"
                android:clickable="true"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/reminder"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:focusableInTouchMode="true"
                    android:onClick="settingsActivity"
                    android:clickable="true">
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/about_title"
                        android:id="@+id/about_title"
                        android:singleLine="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp"
                        android:textColor="#333333"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_creators"
                        android:id="@+id/about_creator"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:textColor="#DD6600" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_company"
                        android:id="@+id/about_company"
                        android:layout_marginTop="5dp"
                        android:textColor="#666666" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_class"
                        android:id="@+id/about_class"
                        android:layout_marginTop="5dp"
                        android:textColor="#666666" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_group"
                        android:id="@+id/about_group"
                        android:layout_marginTop="5dp"
                        android:textColor="#666666" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_date"
                        android:id="@+id/about_date"
                        android:layout_marginTop="5dp"
                        android:textColor="#666666" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_members"
                        android:id="@+id/about_members"
                        android:textColor="#CC6600"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_membernames"
                        android:id="@+id/about_membernames"
                        android:layout_marginTop="5dp"
                        android:textColor="#666666" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_contact"
                        android:id="@+id/about_contact"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textColor="#DD6600" />

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/about_email"
                            android:id="@+id/about_email"
                            android:layout_marginTop="0dp"
                            android:textColor="#666666" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/about_leaderemail"
                            android:id="@+id/about_leaderemail"
                            android:layout_marginTop="0dp"
                            android:textIsSelectable="true"
                            android:textColor="#0000FF"
                            android:linksClickable="true"
                            android:autoLink="email" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/about_phone"
                            android:id="@+id/about_phone"
                            android:layout_marginTop="5dp"
                            android:textColor="#666666" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/about_phonenumber"
                            android:id="@+id/about_phonenumber"
                            android:layout_marginTop="5dp"
                            android:textIsSelectable="true"
                            android:longClickable="true"
                            android:autoLink="phone" />
                    </TableRow>

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
