<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:id="@+id/menu"
    android:focusableInTouchMode="true"
    android:background="#EEEEEE"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reminder_title"
        android:id="@+id/menu_settings"
        android:layout_gravity="center_horizontal"
        android:textColor="#DDDDDD"
        android:gravity="center"
        android:background="#DD6600"
        android:autoText="false" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="135dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:layout_gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/reminder_setreminder"
            android:id="@+id/textView4"
            android:textColor="#DD6600"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reminder_currenttime"
                android:id="@+id/textView5"
                android:textColor="#333333" />

            <TextClock
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textClock"
                android:textColor="#000099" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp" >

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reminder_entertime"
                android:id="@+id/textView6"
                android:textColor="#333333" />

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/editText"
                android:text="@string/reminder_inputtime"
                android:textColor="#009900" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_ambutton"
                android:id="@+id/radioButton"
                android:textColor="#009900" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_pmbutton"
                android:id="@+id/radioButton2"
                android:textColor="#009900" />
        </TableRow>

    </LinearLayout>

    <android.inputmethodservice.ExtractEditText
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:text="Reminder Notes"
        android:id="@+id/extractEditText"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remind Me!"
        android:id="@+id/button2"
        android:layout_gravity="right" />

</LinearLayout>
