<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/park_location"
            android:id="@+id/park_location"
            android:gravity="center"
            android:background="#DD6600" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/set_parked_location"
            android:id="@+id/set_parked_location"
            android:textColor="#DD6600"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginLeft="0dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/product"
            android:id="@+id/product"
            android:textColor="#333333"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="No Location"
            android:id="@+id/productID"
            android:layout_marginTop="25dp"
            android:textColor="#333333" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/choose_location_id"
            android:id="@+id/choos_location_id"
            android:textColor="#333333" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/input_location_id"
            android:layout_gravity="right"
            android:textColor="#0066DD"
            android:background="#FFDDCC"
            android:autoText="false"
            android:layout_marginRight="10dp"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/enter_x_position"
            android:id="@+id/enter_x_position"
            android:textColor="#333333" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_x_location"
            android:layout_gravity="right"
            android:textColor="#0066DD"
            android:background="#FFDDCC"
            android:autoText="false"
            android:layout_marginRight="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/enter_y_position"
            android:id="@+id/enter_y_position"
            android:textColor="#333333" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_y_location"
            android:layout_gravity="right"
            android:textColor="#0066DD"
            android:layout_marginRight="10dp"
            android:background="#FFDDCC" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="OR"
            android:id="@+id/or"
            android:gravity="center"
            android:textColor="#333333"
            android:textIsSelectable="false"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:text="Use Current Location"
            android:id="@+id/use_location_button"
            android:gravity="center"
            android:background="#DD6600" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_location_button"
            android:id="@+id/set_location_button"
            android:layout_marginLeft="0dp"
            android:background="#0099DD"
            android:padding="5dp"
            android:onClick="newParkedLocation"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_location_button"
            android:id="@+id/get_location_button"
            android:layout_marginLeft="10dp"
            android:background="#0099DD"
            android:padding="5dp"
            android:singleLine="false"
            android:onClick="lookupParkedLocation"
            android:nestedScrollingEnabled="false" />

    </TableRow>

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_location_button"
        android:id="@+id/button"
        android:layout_marginLeft="0dp"
        android:background="#0099DD"
        android:padding="5dp"
        android:singleLine="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="removeParkedLocation"
        android:nestedScrollingEnabled="false" />

</LinearLayout>